src/objects/AsyncRequest__c.object
<CustomObject>
    <description>Async Request object</description>
    <fields>
        <fullName>AsyncType__c</fullName>
        <label>AsyncType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AddressVerification</fullName>
                </value>
                <value>
                    <fullName>TranslationPending</fullName>
                </value>
                <value>
                    <fullName>Amount Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewAmount__c</fullName>
        <description>New value of amount field in Concurrency1 example</description>
        <label>NewAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalAmount__c</fullName>
        <description>Original amount value for Concurrency1 example</description>
        <label>OriginalAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <label>Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TargetOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity lookup used in Concurrency1 example</description>
        <label>TargetOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AsyncRequests</relationshipLabel>
        <relationshipName>AsyncRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AsyncRequest</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>AsyncRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>